# MathTaskTools4cpp

./: CMakeLists.txt  conanfile.txt
src/: Global.h  main.cpp
src/HomeWork/: home_work_shower.h  home_work_showers.cpp  home_work_showers.h  shower_factory.cpp  shower_factory.h
src/utils/: AllenLog.cpp  AllenLog.h  allen_log.h  integral_util.cpp  integral_util.h  root_util.cpp  root_util.h
